[gd_scene load_steps=10 format=3 uid="uid://bfs45l06pvyo7"]

[ext_resource type="Script" path="res://src/game/main.gd" id="1_us2mp"]
[ext_resource type="PackedScene" uid="uid://ddfxmo4vqfj43" path="res://src/player/player.tscn" id="1_yq068"]
[ext_resource type="PackedScene" uid="uid://bxs5hnrrh5u0f" path="res://src/collectable/collectable.tscn" id="2_33ega"]
[ext_resource type="Script" path="res://src/game/score_label.gd" id="4_e733n"]
[ext_resource type="Script" path="res://src/game/walls.gd" id="5_7hyuu"]
[ext_resource type="PackedScene" uid="uid://ctqr0j578lxvr" path="res://src/Wall/wall.tscn" id="5_u7k1e"]
[ext_resource type="Script" path="res://src/game/container.gd" id="7_smg6w"]
[ext_resource type="Script" path="res://src/game/game_over.gd" id="8_lm86n"]

[sub_resource type="Curve2D" id="Curve2D_mte0r"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 16, 16, 0, 0, 0, 0, 32, 16, 0, 0, 0, 0, 48, 16, 0, 0, 0, 0, 64, 16, 0, 0, 0, 0, 80, 16, 0, 0, 0, 0, 96, 16, 0, 0, 0, 0, 112, 16, 0, 0, 0, 0, 128, 16, 0, 0, 0, 0, 144, 16, 0, 0, 0, 0, 160, 16, 0, 0, 0, 0, 176, 16, 0, 0, 0, 0, 192, 16, 0, 0, 0, 0, 208, 16, 0, 0, 0, 0, 208, 32, 0, 0, 0, 0, 192, 32, 0, 0, 0, 0, 176, 32, 0, 0, 0, 0, 160, 32, 0, 0, 0, 0, 144, 32, 0, 0, 0, 0, 128, 32, 0, 0, 0, 0, 112, 32, 0, 0, 0, 0, 96, 32, 0, 0, 0, 0, 80, 32, 0, 0, 0, 0, 64, 32, 0, 0, 0, 0, 48, 32, 0, 0, 0, 0, 32, 32, 0, 0, 0, 0, 16, 32, 0, 0, 0, 0, 16, 48, 0, 0, 0, 0, 32, 48, 0, 0, 0, 0, 48, 48, 0, 0, 0, 0, 64, 48, 0, 0, 0, 0, 80, 48, 0, 0, 0, 0, 96, 48, 0, 0, 0, 0, 112, 48, 0, 0, 0, 0, 128, 48, 0, 0, 0, 0, 144, 48, 0, 0, 0, 0, 160, 48, 0, 0, 0, 0, 176, 48, 0, 0, 0, 0, 192, 48, 0, 0, 0, 0, 208, 48, 0, 0, 0, 0, 208, 64, 0, 0, 0, 0, 192, 64, 0, 0, 0, 0, 176, 64, 0, 0, 0, 0, 160, 64, 0, 0, 0, 0, 144, 64, 0, 0, 0, 0, 128, 64, 0, 0, 0, 0, 112, 64, 0, 0, 0, 0, 96, 64, 0, 0, 0, 0, 80, 64, 0, 0, 0, 0, 64, 64, 0, 0, 0, 0, 48, 64, 0, 0, 0, 0, 32, 64, 0, 0, 0, 0, 16, 64, 0, 0, 0, 0, 16, 80, 0, 0, 0, 0, 32, 80, 0, 0, 0, 0, 48, 80, 0, 0, 0, 0, 64, 80, 0, 0, 0, 0, 80, 80, 0, 0, 0, 0, 96, 80, 0, 0, 0, 0, 112, 80, 0, 0, 0, 0, 128, 80, 0, 0, 0, 0, 144, 80, 0, 0, 0, 0, 160, 80, 0, 0, 0, 0, 176, 80, 0, 0, 0, 0, 192, 80, 0, 0, 0, 0, 208, 80, 0, 0, 0, 0, 208, 96, 0, 0, 0, 0, 192, 96, 0, 0, 0, 0, 176, 96, 0, 0, 0, 0, 160, 96, 0, 0, 0, 0, 144, 96, 0, 0, 0, 0, 128, 96, 0, 0, 0, 0, 112, 96, 0, 0, 0, 0, 96, 96, 0, 0, 0, 0, 80, 96, 0, 0, 0, 0, 64, 96, 0, 0, 0, 0, 48, 96, 0, 0, 0, 0, 32, 96, 0, 0, 0, 0, 16, 96, 0, 0, 0, 0, 16, 112, 0, 0, 0, 0, 32, 112, 0, 0, 0, 0, 48, 112, 0, 0, 0, 0, 64, 112, 0, 0, 0, 0, 80, 112, 0, 0, 0, 0, 96, 112, 0, 0, 0, 0, 112, 112, 0, 0, 0, 0, 128, 112, 0, 0, 0, 0, 144, 112, 0, 0, 0, 0, 160, 112, 0, 0, 0, 0, 176, 112, 0, 0, 0, 0, 192, 112, 0, 0, 0, 0, 208, 112, 0, 0, 0, 0, 208, 128, 0, 0, 0, 0, 192, 128, 0, 0, 0, 0, 176, 128, 0, 0, 0, 0, 160, 128, 0, 0, 0, 0, 144, 128, 0, 0, 0, 0, 128, 128, 0, 0, 0, 0, 112, 128, 0, 0, 0, 0, 96, 128, 0, 0, 0, 0, 80, 128, 0, 0, 0, 0, 64, 128, 0, 0, 0, 0, 48, 128, 0, 0, 0, 0, 32, 128, 0, 0, 0, 0, 16, 128, 0, 0, 0, 0, 16, 144, 0, 0, 0, 0, 32, 144, 0, 0, 0, 0, 48, 144, 0, 0, 0, 0, 64, 144, 0, 0, 0, 0, 80, 144, 0, 0, 0, 0, 96, 144, 0, 0, 0, 0, 112, 144, 0, 0, 0, 0, 128, 144, 0, 0, 0, 0, 144, 144, 0, 0, 0, 0, 160, 144, 0, 0, 0, 0, 176, 144, 0, 0, 0, 0, 192, 144, 0, 0, 0, 0, 208, 144, 0, 0, 0, 0, 208, 160, 0, 0, 0, 0, 192, 160, 0, 0, 0, 0, 176, 160, 0, 0, 0, 0, 160, 160, 0, 0, 0, 0, 144, 160, 0, 0, 0, 0, 128, 160, 0, 0, 0, 0, 112, 160, 0, 0, 0, 0, 96, 160, 0, 0, 0, 0, 80, 160, 0, 0, 0, 0, 64, 160, 0, 0, 0, 0, 48, 160, 0, 0, 0, 0, 32, 160, 0, 0, 0, 0, 16, 160, 0, 0, 0, 0, 16, 176, 0, 0, 0, 0, 32, 176, 0, 0, 0, 0, 48, 176, 0, 0, 0, 0, 64, 176, 0, 0, 0, 0, 80, 176, 0, 0, 0, 0, 96, 176, 0, 0, 0, 0, 112, 176, 0, 0, 0, 0, 128, 176, 0, 0, 0, 0, 144, 176, 0, 0, 0, 0, 160, 176, 0, 0, 0, 0, 176, 176, 0, 0, 0, 0, 192, 176, 0, 0, 0, 0, 208, 176, 0, 0, 0, 0, 208, 192, 0, 0, 0, 0, 192, 192, 0, 0, 0, 0, 176, 192, 0, 0, 0, 0, 160, 192, 0, 0, 0, 0, 144, 192, 0, 0, 0, 0, 128, 192, 0, 0, 0, 0, 112, 192, 0, 0, 0, 0, 96, 192, 0, 0, 0, 0, 80, 192, 0, 0, 0, 0, 64, 192, 0, 0, 0, 0, 48, 192, 0, 0, 0, 0, 32, 192, 0, 0, 0, 0, 16, 192, 0, 0, 0, 0, 16, 208, 0, 0, 0, 0, 32, 208, 0, 0, 0, 0, 48, 208, 0, 0, 0, 0, 64, 208, 0, 0, 0, 0, 80, 208, 0, 0, 0, 0, 96, 208, 0, 0, 0, 0, 112, 208, 0, 0, 0, 0, 128, 208, 0, 0, 0, 0, 144, 208, 0, 0, 0, 0, 160, 208, 0, 0, 0, 0, 176, 208, 0, 0, 0, 0, 192, 208, 0, 0, 0, 0, 208, 208, 0, 0, 0, 0, 16, 16)
}
point_count = 170

[node name="game" type="Node2D"]
script = ExtResource("1_us2mp")

[node name="Player" parent="." instance=ExtResource("1_yq068")]
position = Vector2(112, 112)
rotation = 1.57079

[node name="Collectable" parent="." instance=ExtResource("2_33ega")]
position = Vector2(48, 48)

[node name="Path" type="Path2D" parent="."]
visible = false
curve = SubResource("Curve2D_mte0r")

[node name="SpawnLocation" type="PathFollow2D" parent="Path"]
position = Vector2(16, 16)

[node name="Score" type="Label" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 69.0
offset_bottom = 31.0
scale = Vector2(0.6246, 0.609649)
text = "Score: 0"
script = ExtResource("4_e733n")

[node name="walls" type="Node2D" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("5_7hyuu")
player = NodePath("../Player")

[node name="Bottom" parent="walls" instance=ExtResource("5_u7k1e")]
position = Vector2(112, 232)
collision_mask = 3

[node name="Top" parent="walls" instance=ExtResource("5_u7k1e")]
position = Vector2(112, -8)
rotation = 3.14159
collision_mask = 3

[node name="Right" parent="walls" instance=ExtResource("5_u7k1e")]
position = Vector2(232, 128)
rotation = -1.57079
collision_mask = 3

[node name="Left" parent="walls" instance=ExtResource("5_u7k1e")]
position = Vector2(-8, 128)
rotation = 1.57079
collision_mask = 3

[node name="UI" type="Container" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 112.0
offset_top = 112.0
offset_right = 112.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("7_smg6w")

[node name="GameOver" type="ColorRect" parent="UI"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(1, 1, 1, 0.345098)
script = ExtResource("8_lm86n")

[node name="Label" type="Label" parent="UI/GameOver"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.5
offset_top = -11.5
offset_right = 81.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Game over my friend"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(112, 112)
zoom = Vector2(3, 3)

[connection signal="bitten" from="Player" to="." method="_on_player_bitten"]
[connection signal="body_entered" from="Collectable" to="." method="_on_collectable_body_entered"]
[connection signal="body_entered" from="Collectable" to="Player" method="_on_collectable_body_entered"]
[connection signal="collected" from="Collectable" to="." method="_on_collectable_collected"]
[connection signal="body_entered" from="walls/Bottom" to="walls" method="_on_bottom_body_entered"]
[connection signal="body_entered" from="walls/Top" to="walls" method="_on_top_body_entered"]
[connection signal="body_entered" from="walls/Right" to="walls" method="_on_right_body_entered"]
[connection signal="body_entered" from="walls/Left" to="walls" method="_on_left_body_entered"]
